# book-reviews

./: .coverage  .gitignore  README.md  app.py  makefile  pyproject.toml  pytest.ini
docs/: deployment.md  design.md  flask.md  sqlalchemy.md
site/: app.py  config.py  init_db.py  site.db
site/app/: __init__.py  cli.py  config.py  extensions.py  models.py  open_library.py  setup_logging.py
site/app/blueprints/: api.py  books.py  design.py  main.py  poems.py  posts.py
site/app/content/: markdown_posts.py
site/app/database/: book_olid_seed.txt  book_seed.json  convertor.py  models.py  open_library.py  upserts.py
site/app/static/: style.css
site/app/templates/: _macros.html  about.html  base.html  book_detail.html  books.html  designdocs.html  poem_detail.html  poems.html  post_detail.html  posts.html  under_construction.html
site/content/: README.md  __init__.py  extract_quotes.py  markdown_posts.py
site/content/seeds/: book_seed.json
site/database/: schema.sql
site/instance/: site.db
site/migrations/versions/: 525b350d19d0_constrain_book_ratings_and_add_tag_.py  53f24572adcc_posts_from_markdown.py  abc123 move rating to post.py  b9a4f5f9e32e_.py  dd99dbaabf2a_added_new_post_parent_column.py  f9c8ab9e837f_initial.py
site/scripts/: deploy.sh  deploy_db.sh  generate_secret_key.sh
site/seed_database/: README.md  book_seed.json  convertor.py  open_library.py
site/testing/: conftest.py  test_app_init.py  test_logging.py  test_markdown_posts.py  test_models.py  test_open_library.py  test_posts_importer.py  test_posts_routes.py  test_upsert.py
(+4 files in other folders)
