[project]
name = "book-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]


[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter
extend-select = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"